# fastapi_project

./: .env.example  .gitignore  README.md  alembic.ini  main.py  my_test.db  pyproject.toml
docs/source/: conf.py  index.rst
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_53606e9522d39d55_auth_py.html  z_53606e9522d39d55_contacts_py.html  z_53606e9522d39d55_users_py.html  z_dd4b322c5e9a5c17_contact_py.html  z_dd4b322c5e9a5c17_user_py.html
migrations/versions/: 0676278c911d_add_table_users.py  a2d6c4bf9537_initial_migration.py  dd540dce1a7d_add_verify_for_users.py  f3e694a47d5a_initial_migration.py
postgres-data/: postmaster.pid
postgres-data/base/1/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16389  16392  16401  16407  16408  16410  16426  16429  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  2704  3455  3501  3502  3503  (+2 more)
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
postgres-data/pg_stat/: pgstat.stat
src/conf/: config.py
src/database/: db.py
src/entity/: models.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
static/: styles.css
templates/: index.html
tests/: conftest.py  test_pyt_routes_auth.py  test_unit_services_auth.py  test_unit_services_email.py
